# nn03

./: CMakeLists.txt
include/: darray.h  layer.h  layer_comb.h  layer_err.h  layer_include.h  layer_init.h  layer_mat.h  layer_parallel.h  network.h  nmath.h  node.h
src/: layer_err.c  layer_mat.c  layer_parallel.c  main.c  network.c  node.c
